fixes button z-index

--- a/style/style.css
+++ b/style/style.css
@@ -181,7 +181,7 @@ header {
     bottom: 0;
     left: 0;
     display: flex;
-    overflow-x: scroll;
+    overflow-x: hidden;
     overflow-y: hidden;
     scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
@@ -194,6 +194,13 @@ header {
     width: 100%;
     height: 100%;
     scroll-snap-align: center;
+}
+.carousel__slide:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%,-40%,70px);
 }
 .carousel__slide {
     position: relative;
@@ -266,6 +273,7 @@ header {
     font-weight: normal;
     padding: 12px 24px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    z-index: 2;
 }
 .carousel-text--bold {
     font-weight: bold;
